# OpenSecret-SDK

./: .env.example  .env.test  .gitignore  .prettierrc.json  LICENSE.md  README.md  bun.lockb  bunfig.toml  eslint.config.js  flake.nix  package-lock.json  package.json  setup-hooks.sh  tsconfig.build.json  tsconfig.json  vite-der-plugin.ts  vite.config.ts
.githooks/: pre-commit
.github/workflows/: rust.yml  test.yml
docs/: DOCUSAURUS.md  PLATFORM.md
rust/: .env.example  Cargo.toml  LICENSE  README.md
rust/examples/: api_usage.rs  auth_example.rs  test_attestation.rs  test_attestation_only.rs  test_real_session.rs
rust/src/: attestation.rs  cbor.rs  client.rs  crypto.rs  error.rs  lib.rs  openai.rs  push.rs  session.rs  types.rs
rust/tests/: account_management.rs  agent_integration.rs  ai_integration.rs  api_integration.rs  api_keys.rs  attestation.rs  auth_integration.rs  bip85_integration.rs  crypto.rs  integration.rs  session.rs
src/: AI.tsx  App.css  App.tsx  global.d.ts  index.css  main.tsx
src/lib/: ai.test.ts  ai.ts  api.test.ts  api.ts  apiConfig.ts  attestation.test.ts  attestation.ts  attestationForView.ts  config.ts  context.ts  crypto.ts  developer.test.ts  developer.tsx  developerContext.ts  encryptedApi.ts  encryption.ts  getAttestation.ts  index.ts  main.tsx  pcr.ts  pcrHistory.ts  platformApi.ts  signing.test.ts  storage.ts  util.ts
src/lib/test/: api-url-loader.ts  der-loader.ts  platform-api-url-loader.ts  preload.ts  setup.ts  storage.test.ts  utils.ts
website/: bun.lockb  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  typedoc.json
website/api/: README.md  index.md  typedoc-sidebar.cjs
website/api/functions/: OpenSecretDeveloper.md  OpenSecretProvider.md  batchDeleteConversations.md  batchUpdateConversationProject.md  createApiKey.md  createConversation.md  createConversationProject.md  createCustomFetch.md  createSubagent.md  deleteApiKey.md  deleteConversation.md  deleteConversationProject.md  deleteConversations.md  deleteMainAgent.md  deleteSubagent.md  generateSecureSecret.md  getConversation.md  getConversationItem.md  getConversationProject.md  getMainAgent.md  getMainAgentItem.md  getSubagent.md  getSubagentItem.md  hashSecret.md  listApiKeys.md  listConversationItems.md  listConversationProjects.md  listConversations.md  listMainAgentItems.md  listSubagentItems.md  listSubagents.md  updateConversation.md  updateConversationProject.md  useOpenSecret.md  useOpenSecretDeveloper.md
website/api/interfaces/: ApiEndpoint.md  CustomFetchOptions.md  Model.md
website/api/type-aliases/: AgentCreatedBy.md  AgentDeletedObjectResponse.md  AgentDoneEvent.md  AgentErrorEvent.md  AgentItemsListParams.md  AgentMessageEvent.md  ApiContext.md  ApiKey.md  ApiKeyCreateResponse.md  ApiKeyListResponse.md  AttestationDocument.md  BatchDeleteConversationsRequest.md  BatchDeleteConversationsResponse.md  BatchDeleteItemResult.md  BatchUpdateConversationProjectRequest.md  BatchUpdateConversationProjectResponse.md  Conversation.md  ConversationCreateOptions.md  ConversationCreateRequest.md  ConversationDeleteResponse.md  ConversationItem.md  ConversationItemsResponse.md  ConversationProject.md  ConversationProjectCreateRequest.md  ConversationProjectDeleteResponse.md  ConversationProjectListItem.md  CreateSubagentRequest.md  (+39 more)
website/docs/: _category_.json  index.md  registration.md
website/scripts/: docusaurus-build.cjs
(+64 files in other folders)
